Fix articles and add logs